replaces new with valueOf